[project]
name = "KDMiLe-Balancing"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "xgboost-cpu (>=3.2.0,<4.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "linkage"}]